# s3-mpu-rs

./: Cargo.toml  LICENSE  README.md  test.sh
.github/workflows/: rust.yaml
src/: dispatch.rs  into_byte_stream.rs  lib.rs  split.rs  tests.rs
