[package]
name = "s3-mpu"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"
description = "Multipart upload helper for rusoto_s3"
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/s3-mpu/"
repository = "https://github.com/Hakuyume/s3-mpu-rs"
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls", "rusoto_s3/native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls"]

[dependencies]
base64 = "0.13"
bytes = "1"
futures = "0.3"
md-5 = "0.9"
pin-project = "1"
rusoto_core = { version = "0.46", default-features = false }
rusoto_s3 = { version = "0.46", default-features = false }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
