[package]
name = "s3-mpu"
version = "0.2.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2021"
description = "Multipart upload helper for rusoto_s3"
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/s3-mpu/"
repository = "https://github.com/Hakuyume/s3-mpu-rs"
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-http = "0.2"
aws-sdk-s3 = "0.2"
aws-smithy-client = "0.32"
aws-smithy-http = "0.32"
base64 = "0.13"
bytes = "1"
futures = "0.3"
http = "0.2"
http-body = "0.4"
md-5 = "0.9"
pin-project = "1"

[dev-dependencies]
aws-config = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
