[package]
name = "s3-mpu"
version = "0.2.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2021"
description = "A utility to handle AWS S3's multipart-upload sessions."
license = "BSD-3-Clause"
documentation = "https://docs.rs/crate/s3-mpu/"
repository = "https://github.com/Hakuyume/s3-mpu-rs"
readme = "README.md"
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.35"
aws-smithy-types = { version = "0.57", features = ["http-body-0-4-x"] }
base64 = "0.13"
bytes = "1"
futures = "0.3"
http = "0.2"
http-body = "0.4"
md-5 = "0.10"
pin-project = "1"

[dev-dependencies]
anyhow = "1"
aws-config = "0.57"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
